Rewrite code comments across L1/L2/L3 as beginner-friendly teacher-style explanations
Converts remaining multi-line // comment blocks (banking-support-service
uc5/uc6 security, logging, and integration packages) into single /** */
Javadoc blocks, and rewrites their content in plain language a Spring
Boot or React beginner can follow, replacing internal review/fix-note
jargon with explanations of what the code does and why. Also adds the
same style of teacher-style comments to the React frontends
(online-shopping-frontend-uc3, banking-support-frontend-uc6), which had
none before. No application logic, naming, or behavior was changed;
every touched Java module was recompiled and L3's self-test suite
re-run (18/18 passing) to confirm.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>